--- a/pitch-new.html
+++ b/pitch-new.html
@@ -127,7 +127,7 @@
             <div class="inner-wrap">
                 <div class="box-inner-wrap">
                     <div class="main-title-wrap">
-                        <h1 class="h3-title">Invest in UCSS now</h1>
+                        <h1 class="h3-title title-mobile-large">Invest in UCSS now</h1>
                     </div>
                     <div class="elm-scale-wrapper">
                         <div class="scale-title-wrap">
@@ -321,7 +321,7 @@
         <div class="main-services-full-box cnt-section section-small section-1200">
             <div class="inner-wrap">
                 <div class="main-title-wrap text-body text-center">
-                    <div class="h3-title title-center">Why to invest in Credits?</div>
+                    <div class="h3-title title-mobile-large title-center">Why to invest in Credits?</div>
                 </div>
                 <div class="items-wrap">
                     <!--item wrap-->
@@ -392,7 +392,9 @@
                             <li>Merchant Digital Currency Payments</li>
                         </ul>
                         <p>Credits is already provides many of theses services and continue to scale in the coming years licences, compliant financial services with. </p>
-                        <a href="" class="btn button-light">Join the waitlist</a>
+                        <div class="action-wrap">
+                            <a href="" class="btn button-light">Join the waitlist</a>
+                        </div>
                     </div>
                     <div class="photo-inner-wrap">
                         <div class="elm-photo">
@@ -408,7 +410,7 @@
         <div class="main-partners-box cnt-section section-1200">
             <div class="inner-wrap">
                 <div class="main-title-wrap text-body text-center">
-                    <div class="h3-title title-center">Our Partners</div>
+                    <div class="h3-title title-mobile-large title-center">Our Partners</div>
                     <p>Credits has strong partnerships support with industry leaders. Here some of them.</p>
                 </div>
                 <div class="items-wrap">
@@ -580,7 +582,7 @@
         <div class="tiles-about-box cnt-section section-small">
             <div class="inner-wrap">
                 <div class="main-title-wrap text-center">
-                    <h2 class="h3-title title-center">Credits launching services in&nbsp;these countries</h2>
+                    <h2 class="h3-title title-mobile-large title-center">Credits launching services in&nbsp;these countries</h2>
                 </div>
                 <div class="items-wrap">
                     <!--item wrap-->
@@ -669,7 +671,7 @@
             <div class="main-video-list-box cnt-section section-1200">
                 <div class="inner-wrap">
                     <div class="main-title-wrap text-center">
-                        <h2 class="h3-title title-center">Influencers about Credits</h2>
+                        <h2 class="h3-title title-mobile-large title-center">Influencers about Credits</h2>
                     </div>
                     <div class="items-wrap">
                         <!--item wrap-->
@@ -741,7 +743,7 @@
             <div class="main-campaigns-box cnt-section no-ptop section-1000">
                 <div class="inner-wrap">
                     <div class="main-title-wrap text-center">
-                        <h2 class="h3-title title-center">Promotion campaigns</h2>
+                        <h2 class="h3-title title-mobile-large title-center">Promotion campaigns</h2>
                     </div>
                     <div class="items-wrap">
                         <!--item wrap-->
@@ -807,7 +809,7 @@
             <div class="main-giveaways-box cnt-section no-ptop">
                 <div class="inner-wrap">
                     <div class="main-title-wrap text-center">
-                        <h2 class="h3-title title-center">Giveaways</h2>
+                        <h2 class="h3-title title-mobile-large title-center">Giveaways</h2>
                     </div>
                     <div class="items-wrap">
                         <!--item wrap-->
@@ -970,7 +972,7 @@
         <div class="main-questions-box cnt-box section-small">
             <div class="inner-wrap">
                 <div class="main-title-wrap text-body">
-                    <h4 class="h2-title">Questions about STO? Answers.</h4>
+                    <h4 class="h2-title title-mobile-large">Questions about STO? Answers.</h4>
                 </div>
                 <div class="items-wrap">
                     <!--item wrap-->
