--- a/pitch-new.html
+++ b/pitch-new.html
@@ -317,6 +317,109 @@
         </div>
         <!--/overview-media-box-->
 
+        <!--payments-tiles-box-->
+        <div class="payments-tiles-box cnt-section section-bg section-1200 no-ptop">
+            <div class="inner-wrap">
+                <div class="main-title-wrap">
+                    <h2 class="h2-title">Credits’ payment ecosystem</h2>
+                    <p>A licensed and compliant payment service for digital money adoption based on centralised and decentralised ecosystem.</p>
+                </div>
+                <div class="items-wrap">
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">Card</div>
+                            </div>
+                            <div class="tile-title">Debit cards and bank accounts</div>
+                            <p>Mastercard or VISA with checking accounts.</p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">On/Off Ramp</div>
+                            </div>
+                            <div class="tile-title">Bridge fiat with Cryptocurrency</div>
+                            <p>Fast ans inexpensive connection fiat and crypto.</p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">Merchants</div>
+                            </div>
+                            <div class="tile-title">For business and merchants</div>
+                            <p>Credits Pay with crypto or Fiat, OQ codes.</p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">DEX</div>
+                            </div>
+                            <div class="tile-title">Decentralised  services</div>
+                            <p>Based on the fastest Credits blockchain.</p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">Trading</div>
+                            </div>
+                            <div class="tile-title">Exchange, Margin, derivative trading</div>
+                            <p>Best experience with low latency on licensed services. </p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                    <!--item wrap-->
+                    <div class="item-wrap">
+                        <div class="item-tile-payment-inner">
+                            <div class="tile-title-wrap">
+                                <div class="tile-ico">
+                                    <img src="./img/pitch/ico.svg" alt="">
+                                </div>
+                                <div class="tile-ico-title">Lending </div>
+                            </div>
+                            <div class="tile-title">Lending and borrowing services</div>
+                            <p>For cryptocurrency and fiat collaterals.</p>
+                        </div>
+                    </div>
+                    <!--/item wrap-->
+                </div>
+                <div class="info-inner-wrap">
+                    <div class="info-title">Don’t miss out to invest with 50% discount</div>
+                    <div class="info-action">
+                        <a href="" class="btn">Invest now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/payments-tiles-box-->
+
         <!--main-services-full-box-->
         <div class="main-services-full-box cnt-section section-small section-1200">
             <div class="inner-wrap">
